<resources>
    <string name="app_name">Keep ACC POS</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Выйти</string>
    <string name="action_session_finish">Завершить сеанс</string>
    <string name="button_registration">Регистрация</string>
    <string name="button_next">Продолжить</string>
    <string name="button_table_text">Стол</string>
    <string name="button_delivery_text">Доставка</string>
    <string name="button_banquet_text">Банкет</string>
    <string name="button_check_details">Настройки чека</string>
    <string name="button_send_to_payment">Отправить на реализацию</string>
    <string name="button_close_check">Закрыть счет</string>
    <string name="button_sign_in">Войти</string>
    <string name="button_link_to_register">Not a member? Sign up now.</string>
    <string name="button_link_to_login">Already registered! Login Me.</string>
    <string name="button_logout">Выйти</string>
    <string name="button_address">Адрес</string>
    <string name="button_add">Добавить</string>
    <string name="button_add_mode">Добавить модификатор</string>
    <string name="button_help">Нужна помощь? </string>
    <string name="button_cancel_refine">Отменить</string>
    <string name="button_cancel_refine2">Отменить   X</string>
    <string name="button_cancel_refine_change">Отменить и изменить</string>
    <string name="button_cancel_refine_close">Отменить и закрыть</string>
    <string name="button_cash">Оплата наличными</string>
    <string name="button_cashless">Оплата безналичными</string>
    <string name="text_date_preorder">Заказ на дату</string>
    <string name="text_time_preorder">Заказ на время</string>
    <string name="text_waiter_text">Официант</string>
    <string name="text_hall">Зал</string>
    <string name="text_total">Итого</string>
    <string name="text_discount">Скидка</string>
    <string name="text_sum_price">Сумма цены</string>
    <string name="text_reduction">Сумма скидки</string>
    <string name="text_user">Пользователь</string>
    <string name="text_user2">Пользователь:</string>
    <string name="text_prepay">Предоплата</string>
    <string name="text_discount2">Скидка (%)</string>
    <string name="text_for_payment">К оплате:</string>
    <string name="text_num_bill">№ счёта</string>
    <string name="text_state">Состояние</string>
    <string name="text_date">Дата</string>
    <string name="text_date_created">Дата создания</string>
    <string name="text_date_start">Дата начала</string>
    <string name="text_date_finish">Дата конца</string>
    <string name="text_staff">Персонал</string>
    <string name="text_mobile">Телефон</string>
    <string name="text_changes">Изменения</string>
    <string name="text_client">Клиент</string>
    <string name="text_check_item_number">Чек №</string>
    <string name="text_check_item_title">Наименование</string>
    <string name="text_check_item_measurement">Ед. Изм.</string>
    <string name="text_check_item_count">Кол-во</string>
    <string name="text_check_item_price">Цена</string>
    <string name="text_check_item_sum">Итого</string>
    <string name="text_check_item_realization">Реализовано</string>
    <string name="text_personal_pin">Персональный PIN</string>
    <string name="text_count_guest">Кол-во гостей</string>
    <string name="text_not_registered">Еще не зарегистрированы?</string>
    <string name="hint_login">Логин</string>
    <string name="hint_mail">E-mail</string>
    <string name="hint_password">Пароль</string>
    <string name="check_box_remember">Запомнить?</string>
    <string name="msg_authorization">Авторизация</string>
    <string name="msg_logout">Выход</string>
    <string name="msg_session_finish">Завершение сеанса</string>
    <string name="msg_loading">Загрузка</string>
    <string name="msg_incorrect_login_data">Неправильно введены логин или пароль</string>
    <string name="msg_input_login">Введите логин</string>
    <string name="msg_input_password">Введите пароль</string>
    <string name="text_terminal">Терминал:</string>
    <string name="text_menu">Меню</string>
        <string name="CVV2">CVV2</string>
        <string name="add">Добавить</string>
        <string name="add_free_position">Определить пользовательский положение</string>
        <string name="add_stock">Пополнить</string>
        <string name="address">Адрес</string>
        <string name="all_items">Все</string>
        <string name="app_name_pro">TabShop PRO</string>
        <string name="authorizenet">Authorize.NET</string>
        <string name="authorizenet_login">Authorize Login</string>
        <string name="authorizenet_pwd">Authorize Password</string>
        <string name="authorizenet_register">Register Device</string>
        <string name="autoBackup">Автоматическое резервное копирование</string>
        <string name="backupInterval">Резервное копирование Интервал (в минутах )</string>
        <string name="backup_all">Резервное копирование всех</string>
        <string name="backup_db">Полная резервная копия базы</string>
        <string name="bank_transfer_info">Текст выписки счета-фактуры</string>
        <string name="barcode_image">Barcode Image</string>
        <string name="bitcoin">Bitcoin</string>
        <string name="buy_features">Купить особенности</string>
        <string name="cancel">Отмена</string>
        <string name="cancel_invoice">Отмена</string>
        <string name="canceled_total">Canceled Total</string>
        <string name="capture_name">QR Code Capture</string>
        <string name="card">Карта</string>
        <string name="card_number">Card Number</string>
        <string name="cash">Наличные деньги</string>
        <string name="change_price">изменять</string>
        <string name="change_product">Изменить продукт</string>
        <string name="charge_card">Charge Credit Card</string>
        <string name="charts">Прибыль диаграммы</string>
        <string name="charts_price">Купить $1,96</string>
        <string name="check">Проверить</string>
        <string name="checkout">Оформить заказ</string>
        <string name="cl_freq">Частота (по умолчанию: 30 сек)</string>
        <string name="cl_settings">Параметры синхронизации клиента</string>
        <string name="close_day">Закрыть день</string>
        <string name="completed_transaction">Your transaction has been processed</string>
        <string name="confirm_delete_all">Подтверждение удаления всех?</string>
        <string name="contents_contact">Contact info</string>
        <string name="contents_email">Email address</string>
        <string name="contents_location">Geographic coordinates</string>
        <string name="contents_phone">Phone number</string>
        <string name="contents_sms">SMS address</string>
        <string name="contents_text">Plain text</string>
        <string name="cost_price_sum">Cost Price Sum:</string>
        <string name="count_refunds">Количество выплат</string>
        <string name="coupon_code">Код купона</string>
        <string name="creditcard">Кредитная карта</string>
        <string name="custom_pos">Custom</string>
        <string name="customer">Клиент</string>
        <string name="customer_count">Customer Count</string>
        <string name="cvv2_info_message">The security code (CVV2) is a unique three or four digit number located on the back of a credit card</string>
        <string name="cvv2_info_title">What is a CVV2?</string>
        <string name="database_settings">Database</string>
        <string name="day">День</string>
        <string name="day_report">Day Report</string>
        <string name="decoder_name">QR Code Decoder</string>
        <string name="delete">Удалить</string>
        <string name="delete_all">Удалить все</string>
        <string name="delete_category">Удалите категорию!</string>
        <string name="delete_product">Удаление продукта</string>
        <string name="discount">Скидка</string>
        <string name="discountName">Скидка на имя</string>
        <string name="discounts">Скидки</string>
        <string name="dlg_choosedir_file">Choose CSV</string>
        <string name="dlg_choosedir_title">выбрать директорию</string>
        <string name="edit_settings">Изменить параметры</string>
        <string name="email">Отправить по электронной почте</string>
        <string name="encoder_name">QR Code Encoder</string>
        <string name="end_of_day_report">Day Report</string>
        <string name="enjoy">Если вам нравится</string>
        <string name="enjoy2">, пожалуйста, найдите минутку, чтобы оценить его. Спасибо за вашу поддержку!</string>
        <string name="enter_card_menu_text">Enter Card Information</string>
        <string name="error_field_required">This field is required</string>
        <string name="error_incorrect_password">This password is incorrect</string>
        <string name="error_invalid_card_number">This card number is invalid</string>
        <string name="error_invalid_cvv2">This cvv2 is invalid</string>
        <string name="error_invalid_expdate">This expiration is invalid</string>
        <string name="error_invalid_loginID">This login ID is invalid</string>
        <string name="error_invalid_password">This password is too short</string>
        <string name="error_invalid_zipcode">This zipcode is invalid</string>
        <string name="error_network">Unable to complete request. No internet connection.</string>
        <string name="esc_pos_printer">ESC/POS</string>
        <string name="expiration_date">MM/YY</string>
        <string name="export_csv">Экспорт CSV</string>
        <string name="exporting_csv">Exporting CSV</string>
        <string name="exporting_daily_report">Exporting Daily Report</string>
        <string name="exporting_month_report">Exporting Month Report</string>
        <string name="file_storage_location">File Storage Location</string>
        <string name="finish">Отделка</string>
        <string name="generate">генерировать</string>
        <string name="generated_on">Generated on</string>
        <string name="gift_card">Подарочная карта</string>
        <string name="go_pro">Купите особенности!</string>
        <string name="google_spreadsheet">Sync Settings</string>
        <string name="graph">Создание диаграммы</string>
        <string name="help">Help</string>
        <string name="i_discounts">Discounts:</string>
        <string name="i_from">from</string>
        <string name="i_taxes">Taxes:</string>
        <string name="i_to">to</string>
        <string name="i_total">Total:</string>
        <string name="image">Image</string>
        <string name="import_csv">Импорт CSV</string>
        <string name="import_csv_dropbox">Import from Share</string>
        <string name="import_etsy">Etsy import</string>
        <string name="import_export_csv">Импорт/экспорт в CSV</string>
        <string name="import_export_csv_price">Купить $0.99</string>
        <string name="importing_csv">Импорт CSV</string>
        <string name="inappstore_ok">Хорошо</string>
        <string name="income_report_file_name">_DayReport</string>
        <string name="inventory">Инвентаризация</string>
        <string name="invoice">Счет-фактура</string>
        <string name="invoiceTitle">Название счета</string>
        <string name="invoices">Счета-фактуры</string>
        <string name="item">Пункт</string>
        <string name="kitchen_display">KitchenDisplay Address</string>
        <string name="login_progress_signing_in">Logging In…</string>
        <string name="low_stock_notify_msg">Низких запасов:</string>
        <string name="manage_discounts">Скидки</string>
        <string name="manage_products">Продукция</string>
        <string name="manage_taxes">Налоги</string>
        <string name="menu_change_table_name">имя таблицы</string>
        <string name="menu_rate">Курс</string>
        <string name="menu_settings">Параметры</string>
        <string name="menu_sync_title_old">Sync Settings (deprecated)</string>
</resources>